// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PermissionsRole/> not editable 1`] = `
<div
  className="row container-expandable"
>
  <div
    className="container-expandable-grey container-expandable-child__inactive container-expandable__active"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <i
      className="container-expandable-child__img"
    >
      <i
        className="fa fa-unlock-alt fa-3x"
        style={
          {
            "padding": "5px",
          }
        }
      />
    </i>
    <div
      className="pull-right container-expandable-child__chevron"
      onClick={[Function]}
    >
      <i
        className="fa fa-chevron-down"
        onClick={[Function]}
      />
    </div>
    <div
      className="container-expandable-heading"
    >
      <div
        className="container-expandable-heading--clause"
      >
        <span
          className="permissions-title"
        >
          Editor
        </span>
      </div>
      <div>
        <span
          className="container-expandable-heading"
        >
          <span>
            3
             member
            s
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="permissions-groups-expandable-container"
  >
    <div>
      Editors may read, add, update and delete information.
    </div>
    <div
      className="permissions-assignments-row row"
    >
      <div
        className="col-sm-6 col-xs-12"
      >
        <div>
          Groups:
        </div>
        <ul
          className="permissions-groups-members-ul"
        >
          <li
            className="permissions-groups-member-li"
          >
            <button
              className="permissions-button-display btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Editor User Group
            </button>
          </li>
        </ul>
      </div>
      <div
        className="col-sm-6 col-xs-12"
      >
        <div>
          Users:
        </div>
        <ul
          className="permissions-groups-members-ul"
        >
          <li
            className="permissions-groups-member-li"
          >
            <button
              className="permissions-button-display btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              cnathe@labkey.com (Cory Nathe)
            </button>
          </li>
          <li
            className="permissions-groups-member-li"
          >
            <button
              className="permissions-button-display btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Inactive User: 4971
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PermissionsRole/> showing a selected and disabled principal 1`] = `
<div
  className="row container-expandable"
>
  <div
    className="container-expandable-grey container-expandable-child__inactive container-expandable__active"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <i
      className="container-expandable-child__img"
    >
      <i
        className="fa fa-unlock-alt fa-3x"
        style={
          {
            "padding": "5px",
          }
        }
      />
    </i>
    <div
      className="pull-right container-expandable-child__chevron"
      onClick={[Function]}
    >
      <i
        className="fa fa-chevron-down"
        onClick={[Function]}
      />
    </div>
    <div
      className="container-expandable-heading"
    >
      <div
        className="container-expandable-heading--clause"
      >
        <span
          className="permissions-title"
        >
          Editor
        </span>
      </div>
      <div>
        <span
          className="container-expandable-heading"
        >
          <span>
            3
             member
            s
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="permissions-groups-expandable-container"
  >
    <div>
      Editors may read, add, update and delete information.
    </div>
    <div
      className="permissions-assignments-row row"
    >
      <div
        className="col-sm-6 col-xs-12"
      >
        <div>
          Groups:
        </div>
        <ul
          className="permissions-groups-members-ul"
        >
          <li
            className="permissions-groups-member-li"
          >
            <div
              className="permissions-button-group btn-group"
            >
              <button
                className="btn btn-default"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <i
                  className="fa fa-remove"
                />
              </button>
              <button
                className="permissions-button-display btn btn-default"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Editor User Group
              </button>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="col-sm-6 col-xs-12"
      >
        <div>
          Users:
        </div>
        <ul
          className="permissions-groups-members-ul"
        >
          <li
            className="permissions-groups-member-li"
          >
            <div
              className="permissions-button-group btn-group"
            >
              <div
                className="disabled-button-with-tooltip "
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <button
                  className="btn btn-primary"
                  disabled={true}
                  type="button"
                >
                  <i
                    className="fa fa-remove"
                  />
                </button>
              </div>
              <button
                className="permissions-button-display btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                cnathe@labkey.com (Cory Nathe)
              </button>
            </div>
          </li>
          <li
            className="permissions-groups-member-li"
          >
            <div
              className="permissions-button-group btn-group"
            >
              <button
                className="btn btn-default"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <i
                  className="fa fa-remove"
                />
              </button>
              <button
                className="permissions-button-display btn btn-default"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Inactive User: 4971
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="select-input-container form-group row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="select-input css-b62m3t-container"
          id="selectinput-2"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-4-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className="select-input__control css-13cymwt-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="select-input__value-container css-1fdsijx-ValueContainer"
            >
              <div
                className="select-input__placeholder css-1jqq78o-placeholder"
                id="react-select-4-placeholder"
              >
                Add member or group...
              </div>
              <div
                className="select-input__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-4-placeholder"
                  aria-expanded={false}
                  aria-haspopup={true}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className="select-input__input"
                  disabled={false}
                  id="react-select-4-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  spellCheck="false"
                  style={
                    {
                      "background": 0,
                      "border": 0,
                      "color": "inherit",
                      "font": "inherit",
                      "gridArea": "1 / 2",
                      "label": "input",
                      "margin": 0,
                      "minWidth": "2px",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className="select-input__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="addRoleAssignment"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PermissionsRole/> with both group and user assignments 1`] = `
<div
  className="row container-expandable"
>
  <div
    className="container-expandable-grey container-expandable-child__inactive container-expandable__active"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <i
      className="container-expandable-child__img"
    >
      <i
        className="fa fa-unlock-alt fa-3x"
        style={
          {
            "padding": "5px",
          }
        }
      />
    </i>
    <div
      className="pull-right container-expandable-child__chevron"
      onClick={[Function]}
    >
      <i
        className="fa fa-chevron-down"
        onClick={[Function]}
      />
    </div>
    <div
      className="container-expandable-heading"
    >
      <div
        className="container-expandable-heading--clause"
      >
        <span
          className="permissions-title"
        >
          Editor
        </span>
      </div>
      <div>
        <span
          className="container-expandable-heading"
        >
          <span>
            3
             member
            s
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="permissions-groups-expandable-container"
  >
    <div>
      Editors may read, add, update and delete information.
    </div>
    <div
      className="permissions-assignments-row row"
    >
      <div
        className="col-sm-6 col-xs-12"
      >
        <div>
          Groups:
        </div>
        <ul
          className="permissions-groups-members-ul"
        >
          <li
            className="permissions-groups-member-li"
          >
            <div
              className="permissions-button-group btn-group"
            >
              <button
                className="btn btn-default"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <i
                  className="fa fa-remove"
                />
              </button>
              <button
                className="permissions-button-display btn btn-default"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Editor User Group
              </button>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="col-sm-6 col-xs-12"
      >
        <div>
          Users:
        </div>
        <ul
          className="permissions-groups-members-ul"
        >
          <li
            className="permissions-groups-member-li"
          >
            <div
              className="permissions-button-group btn-group"
            >
              <button
                className="btn btn-default"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <i
                  className="fa fa-remove"
                />
              </button>
              <button
                className="permissions-button-display btn btn-default"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                cnathe@labkey.com (Cory Nathe)
              </button>
            </div>
          </li>
          <li
            className="permissions-groups-member-li"
          >
            <div
              className="permissions-button-group btn-group"
            >
              <button
                className="btn btn-default"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <i
                  className="fa fa-remove"
                />
              </button>
              <button
                className="permissions-button-display btn btn-default"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Inactive User: 4971
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="select-input-container form-group row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="select-input css-b62m3t-container"
          id="selectinput-1"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-3-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className="select-input__control css-13cymwt-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="select-input__value-container css-1fdsijx-ValueContainer"
            >
              <div
                className="select-input__placeholder css-1jqq78o-placeholder"
                id="react-select-3-placeholder"
              >
                Add member or group...
              </div>
              <div
                className="select-input__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-3-placeholder"
                  aria-expanded={false}
                  aria-haspopup={true}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className="select-input__input"
                  disabled={false}
                  id="react-select-3-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  spellCheck="false"
                  style={
                    {
                      "background": 0,
                      "border": 0,
                      "color": "inherit",
                      "font": "inherit",
                      "gridArea": "1 / 2",
                      "label": "input",
                      "margin": 0,
                      "minWidth": "2px",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className="select-input__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="addRoleAssignment"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PermissionsRole/> without assignments 1`] = `
<div
  className="row container-expandable"
>
  <div
    className="container-expandable-grey container-expandable-child__inactive container-expandable__active"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <i
      className="container-expandable-child__img"
    >
      <i
        className="fa fa-unlock-alt fa-3x"
        style={
          {
            "padding": "5px",
          }
        }
      />
    </i>
    <div
      className="pull-right container-expandable-child__chevron"
      onClick={[Function]}
    >
      <i
        className="fa fa-chevron-down"
        onClick={[Function]}
      />
    </div>
    <div
      className="container-expandable-heading"
    >
      <div
        className="container-expandable-heading--clause"
      >
        <span
          className="permissions-title"
        >
          Author
        </span>
      </div>
      <div>
        <span
          className="container-expandable-heading"
        >
          <span>
            0
             member
            s
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    className="permissions-groups-expandable-container"
  >
    <div>
      Authors may read and add information in some cases, but may update and delete only information they added. Supported for only Message Boards. See the online documentation for details.
    </div>
    <div
      className="permissions-assignments-row row"
    >
      <div
        className="col-sm-6 col-xs-12"
      >
        <div>
          Groups:
        </div>
        <ul
          className="permissions-groups-members-ul"
        >
          <li
            className="permissions-groups-member-li permissions-groups-member-none"
          >
            None
          </li>
        </ul>
      </div>
      <div
        className="col-sm-6 col-xs-12"
      >
        <div>
          Users:
        </div>
        <ul
          className="permissions-groups-members-ul"
        >
          <li
            className="permissions-groups-member-li permissions-groups-member-none"
          >
            None
          </li>
        </ul>
      </div>
    </div>
    <div
      className="select-input-container form-group row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="select-input css-b62m3t-container"
          id="selectinput-0"
          onKeyDown={[Function]}
        >
          <span
            className="css-1f43avz-a11yText-A11yText"
            id="react-select-2-live-region"
          />
          <span
            aria-atomic="false"
            aria-live="polite"
            aria-relevant="additions text"
            className="css-1f43avz-a11yText-A11yText"
          />
          <div
            className="select-input__control css-13cymwt-control"
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <div
              className="select-input__value-container css-1fdsijx-ValueContainer"
            >
              <div
                className="select-input__placeholder css-1jqq78o-placeholder"
                id="react-select-2-placeholder"
              >
                Add member or group...
              </div>
              <div
                className="select-input__input-container css-qbdosj-Input"
                data-value=""
              >
                <input
                  aria-autocomplete="list"
                  aria-describedby="react-select-2-placeholder"
                  aria-expanded={false}
                  aria-haspopup={true}
                  autoCapitalize="none"
                  autoComplete="off"
                  autoCorrect="off"
                  className="select-input__input"
                  disabled={false}
                  id="react-select-2-input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  required={false}
                  role="combobox"
                  spellCheck="false"
                  style={
                    {
                      "background": 0,
                      "border": 0,
                      "color": "inherit",
                      "font": "inherit",
                      "gridArea": "1 / 2",
                      "label": "input",
                      "margin": 0,
                      "minWidth": "2px",
                      "opacity": 1,
                      "outline": 0,
                      "padding": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={0}
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
            >
              <span
                className="select-input__indicator-separator css-1u9des2-indicatorSeparator"
              />
              <div
                aria-hidden="true"
                className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="css-tj5bde-Svg"
                  focusable="false"
                  height={20}
                  viewBox="0 0 20 20"
                  width={20}
                >
                  <path
                    d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <input
            name="addRoleAssignment"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
